@@ -1,3 +1,8 @@
+2007-05-06  Mike Frysinger  <vapier@gentoo.org>
+
+	* tst-cancel-wrappers.sh: Set C["fdatasync"] to 1.
+	* tst-cancel4.c (tf_fdatasync): New test.
+
 2007-04-27  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #4392]
